--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,9 @@
   "author": "",
   "license": "ISC",
   "type": "module",
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "dependencies": {
     "@genkit-ai/google-genai": "^1.27.0",
     "@google/generative-ai": "^0.24.1",
