--- a/server/package.json
+++ b/server/package.json
@@ -31,7 +31,8 @@
     "morgan": "^1.10.1",
     "prisma": "^6.19.1",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
